# design-pattern-notes

./: .gitignore  README.md
CompoundPattern/: CompoundPattern.sln  readme.md
CompoundPattern/CompoundPattern/: CompoundPattern.csproj
CompoundPattern/CompoundPattern/Properties/: AssemblyInfo.cs
CompoundPattern/CompoundPattern/src/: DuckSimulator.cs  Flock.cs  IObserver.cs  IQuackObservable.cs  IQuackable.cs  Observable.cs  Program.cs  QuackCounter.cs  Quackologist.cs
CompoundPattern/CompoundPattern/src/Ducks/: DuckCall.cs  Goose.cs  GooseAdapter.cs  MallardDuck.cs  RedheadDuck.cs  RubberDuck.cs
CompoundPattern/CompoundPattern/src/Factories/: AbstractDuckFactory.cs  CountingDuckFactory.cs  (+1 more)
DecoratorPattern/: Beverage.cpp  Beverage.h  CMakeLists.txt  CondimentDecorator.h  Espresso.cpp  Espresso.h  HouseBlend.cpp  HouseBlend.h  Mocha.cpp  Mocha.h  main.cpp
ObserverPattern/: CMakeLists.txt  CurrentConditionsDisplay.cpp  CurrentConditionsDisplay.h  DisplayElement.h  IDisplayElement.h  IObserver.h  ISubject.h  Observer.h  Subject.h  WeatherData.cpp  WeatherData.h  main.cpp
StrategyPattern/: CMakeLists.txt  main.cpp
StrategyPattern/Ducks/: Duck.cpp  Duck.h
StrategyPattern/Ducks/DerivedDucks/: MallardDuck.cpp  MallardDuck.h  RubberDuck.cpp  RubberDuck.h
StrategyPattern/FlyBehaviors/: IFlyBehavior.h
StrategyPattern/FlyBehaviors/DerivedFlyBehaviors/: FlyNoWay.cpp  FlyNoWay.h  FlyWithWings.cpp  FlyWithWings.h
StrategyPattern/QuackBehaviors/: IQuackBehavior.h
StrategyPattern/QuackBehaviors/DerivedQuackBehaviors/: Queak.cpp  Queak.h  Squeak.cpp  Squeak.h
